tests/testcases/errors/BCE0155-1.boo
"""
BCE0155-1.boo(7,14): BCE0155: Instantiating generic parameters is not yet supported.
"""

class Foo[of T]:
	def Bar(ref i as T):
		i = T()

